--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "sass-dev": "sass sass:temp --watch --embed-source-map",
     "sass-build": "sass sass:temp --embed-source-map --style=compressed",
     "postcss": "postcss temp/style.css -u autoprefixer -d . --map --watch",
+    "postcss-build": "postcss temp/style.css -u autoprefixer -d . --map",
     "parcel-dev": "parcel watch js/src/app.js --out-dir js/dist",
     "parcel-build": "parcel build js/src/app.js --out-dir js/dist"
   },
